[gd_scene load_steps=11 format=3 uid="uid://bjxn3n1i3jyfm"]

[ext_resource type="PackedScene" uid="uid://vqfx17hay0mi" path="res://Character/Player/player.tscn" id="1_i20v4"]
[ext_resource type="Script" path="res://Character/Player/Classes/RangedPlayer/RangedPlayer.gd" id="2_2gf6j"]
[ext_resource type="Shader" path="res://Character/character.gdshader" id="3_vf1lj"]
[ext_resource type="Texture2D" uid="uid://bpabcgdcaklk0" path="res://Character/Player/Classes/RangedPlayer/Sprites/blastunder.png" id="4_unued"]
[ext_resource type="Texture2D" uid="uid://ffypxeam8lbb" path="res://Character/Player/Classes/RangedPlayer/Sprites/blast.png" id="5_unrl3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ifd8"]
shader = ExtResource("3_vf1lj")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/flashState = 0.0

[sub_resource type="Animation" id="Animation_wnqop"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flashState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tihiw"]
resource_name = "flash_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flashState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sllhu"]
_data = {
"RESET": SubResource("Animation_wnqop"),
"flash_damage": SubResource("Animation_tihiw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4183p"]
radius = 49.0
height = 136.0

[node name="RangedPlayer" instance=ExtResource("1_i20v4")]
position = Vector2(-23, -11)

[node name="CharacterBody2D" parent="." index="0" groups=["Player"]]
texture_filter = 0
script = ExtResource("2_2gf6j")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" parent="CharacterBody2D" index="0"]
material = SubResource("ShaderMaterial_7ifd8")

[node name="AnimationPlayer" parent="CharacterBody2D/AnimatedSprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_sllhu")
}

[node name="CollisionShape2D" parent="CharacterBody2D" index="1"]
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="CharacterBody2D" index="2"]
metadata/_edit_group_ = true

[node name="player_hitbox" type="Area2D" parent="CharacterBody2D" index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/player_hitbox" index="0"]
position = Vector2(0, -6)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_4183p")

[node name="attack_cooldown" type="Timer" parent="CharacterBody2D" index="5"]

[node name="UI" type="CanvasLayer" parent="." index="5"]

[node name="healthBar" type="ProgressBar" parent="UI" index="0"]
unique_name_in_owner = true
modulate = Color(0.0941176, 0.741176, 0.0588235, 1)
offset_left = 38.0
offset_top = 41.0
offset_right = 575.0
offset_bottom = 89.0
show_percentage = false

[node name="ReloadProgress" type="TextureProgressBar" parent="UI" index="1"]
unique_name_in_owner = true
offset_left = 829.0
offset_top = -15.0
offset_right = 1575.0
offset_bottom = 405.0
scale = Vector2(0.4, 0.4)
step = 0.1
value = 1.0
texture_under = ExtResource("4_unued")
texture_progress = ExtResource("5_unrl3")

[node name="reloadTimer" type="Timer" parent="UI/ReloadProgress" index="0"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="UI" index="2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" index="0"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/MarginContainer" index="1"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer2/HBoxContainer" index="0"]
layout_mode = 2
text = "Skills"

[connection signal="body_entered" from="CharacterBody2D/player_hitbox" to="CharacterBody2D" method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/player_hitbox" to="CharacterBody2D" method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="CharacterBody2D/attack_cooldown" to="CharacterBody2D" method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="UI/ReloadProgress/reloadTimer" to="CharacterBody2D" method="_on_reload_timer_timeout"]
